k8s/overlays/main/imagepull-always-backend.patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
      - name: backend
        imagePullPolicy: Always
