k8s/overlays/main/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: main  
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /nexus
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              name: http
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              name: http
